Changelog for mk-table-checksum and mk-checksum-filter:

2007-12-27: version 1.1.23

   * Updated documentation about version compatibility.
   * Updated documentation for --replcheck.

2007-12-16: version 1.1.22

   * --replicate did not store chunk boundaries correctly (bug #1850243).
   * --tables and --ignoretables now accept names in the form db.tbl.

2007-12-07: version 1.1.21

   * Updated common code.
   * --chunksize was broken when no suffix given (bug #1845018).
   * --replcheck replaces the --recursecheck option (bug #1841407).

2007-11-25: version 1.1.20

   * --replcheck didn't recurse; it should recurse one level (to slaves).

2007-11-18: version 1.1.19

   * Check for needed privileges on --replicate table before beginning.
   * Made some error messages more informative.
   * Fixed child process exit status with 8-bit right-shift.
   * Improved checksumming code auto-detects best algorithm and function.
   * Added --ignoreengine option; ignores federated and merge by default.
   * Added --columns and --checksum options.
   * Removed --chunkcol, --chunksize-exact, --index options.
   * --chunksize can be specified as a data size now.
   * Improved chunking algorithm handles more cases and uses fewer chunks.
   * Do not print --replcheck results for servers that are not slaves.
   * Create only one DB connection for each host, not one per host/tbl/chunk.
   * Code assumed backtick quoting, broke on SQL_MODE=ANSI (bug #1813030).
   * There were many potential bugs with database and table name quoting.
   * Child exit status errors could be masked by subsequent successes.

2007-11-12: version 1.1.18

   * DSN Parsing was broken.

2007-11-04: version 1.1.17

   * Made command-line help easier to use.
   * Removed the dependency on Term::ReadKey.
   * Replaced some code with modules that are unit-tested.

2007-10-01: version 1.1.16

   * Made mk-checksum-filter able to compare tables in different databases.

2007-09-20: version 1.1.15
