@@ -24,7 +24,7 @@ use strict;
 use warnings FATAL => 'all';
 
 # ###########################################################################
-# OptionParser package 1369
+# OptionParser package 1584
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -105,6 +105,35 @@ sub new {
             $ENV{MKDEBUG} && _d(@participants, ' copy from each other');
          }
 
+      }
+   }
+
+   if ( $ENV{MKDEBUG} ) {
+      my $text = do {
+         local $RS = undef;
+         open my $fh, "<", $PROGRAM_NAME
+            or die "Can't open $PROGRAM_NAME: $OS_ERROR";
+         <$fh>;
+      };
+      my %used = map { $_ => 1 } $text =~ m/\$opts\{'?([\w-]+)'?\}/g;
+      my @unused;
+      my @undefined;
+      my %option_exists;
+      foreach my $opt ( @opts ) {
+         next unless ref $opt;
+         my $key = $opt->{k};
+         $option_exists{$key}++;
+         next if $key =~ m/^(?:help|version|F|p|P|S|u)$/;
+         push @unused, $key unless $used{$key};
+      }
+      foreach my $key ( keys %used ) {
+         push @undefined, $key unless $option_exists{$key};
+      }
+      if ( @unused || @undefined ) {
+         die "The following command-line options are unused: "
+            . join(',', @unused)
+            . ' The following are undefined: '
+            . join(',', @undefined);
       }
    }
 
@@ -450,7 +479,7 @@ $opt_parser->usage_or_errors(%opts);
 # ############################################################################
 
 my $exit_status = 0;
-my $one_file    = @ARGV < 2;
+my $one_file    = @ARGV < 2 && !($opts{i} || %{$opts{d}});
 # TODO: $one_file doesn't work right when trying to compare two databases from
 # the same server with -i or --equaldbs.
 
@@ -470,7 +499,7 @@ my $ORIG     = 11; # Added during processing, not part of input.
 
 my $num_cols = 11;
 
-my %lines_for;          # All lines from all files, if > 1 file on cmdline
+my %lines_for;          # All lines from all files, !$one_file 
 my $last_chunk;         # db.tbl.chunk of last line read
 my $current_set = [];   # working set of lines to process
 
@@ -583,6 +612,9 @@ This comma-separated list of database names is always considered to have the
 same tables.  In other words, this makes C<database1.table1.chunk1> equal to
 C<database2.table1.chunk1> if they have the same checksum.
 
+This disables incremental processing, so you won't see any results until all
+input is processed.
+
 =item --header
 
 Preserves headers output by mk-table-checksum.
@@ -594,6 +626,9 @@ Displays a help message.
 =item --ignoredb
 
 Ignore the database entirely when comparing lines.
+
+This disables incremental processing, so you won't see any results until all
+input is processed.
 
 =item --master
 
