@@ -23,7 +23,7 @@ use strict;
 use warnings FATAL => 'all';
 
 # ###########################################################################
-# TableParser package 1348
+# TableParser package 1561
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -160,7 +160,7 @@ sub find_best_index {
          ($best) = $self->sort_indexes($tbl);
       }
    }
-   $ENV{MKDEBUG} && _d("Best index found is " . ($index || 'undef'));
+   $ENV{MKDEBUG} && _d("Best index found is " . ($best || 'undef'));
    return $best;
 }
 
@@ -521,7 +521,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# OptionParser package 1369
+# OptionParser package 1584
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -602,6 +602,35 @@ sub new {
             $ENV{MKDEBUG} && _d(@participants, ' copy from each other');
          }
 
+      }
+   }
+
+   if ( $ENV{MKDEBUG} ) {
+      my $text = do {
+         local $RS = undef;
+         open my $fh, "<", $PROGRAM_NAME
+            or die "Can't open $PROGRAM_NAME: $OS_ERROR";
+         <$fh>;
+      };
+      my %used = map { $_ => 1 } $text =~ m/\$opts\{'?([\w-]+)'?\}/g;
+      my @unused;
+      my @undefined;
+      my %option_exists;
+      foreach my $opt ( @opts ) {
+         next unless ref $opt;
+         my $key = $opt->{k};
+         $option_exists{$key}++;
+         next if $key =~ m/^(?:help|version|F|p|P|S|u)$/;
+         push @unused, $key unless $used{$key};
+      }
+      foreach my $key ( keys %used ) {
+         push @undefined, $key unless $option_exists{$key};
+      }
+      if ( @unused || @undefined ) {
+         die "The following command-line options are unused: "
+            . join(',', @unused)
+            . ' The following are undefined: '
+            . join(',', @undefined);
       }
    }
 
@@ -1143,7 +1172,7 @@ sub _d {
 # ###########################################################################
 
 # ###########################################################################
-# MySQLDump package 1484
+# MySQLDump package 1574
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -1238,6 +1267,25 @@ sub dump {
    }
 }
 
+sub _use_db {
+   my ( $self, $dbh, $quoter, $new ) = @_;
+   if ( !$new ) {
+      $ENV{MKDEBUG} && _d('No new DB to use');
+      return;
+   }
+   my $sql = 'SELECT DATABASE()';
+   $ENV{MKDEBUG} && _d($sql);
+   my $curr = $dbh->selectrow_array($sql);
+   if ( $curr && $new && $curr eq $new ) {
+      $ENV{MKDEBUG} && _d('Current and new DB are the same');
+      return $curr;
+   }
+   $sql = 'USE ' . $quoter->quote($new);
+   $ENV{MKDEBUG} && _d($sql);
+   $dbh->do($sql);
+   return $curr;
+}
+
 sub get_create_table {
    my ( $self, $dbh, $quoter, $db, $tbl ) = @_;
    if ( !$self->{tables}->{$db}->{$tbl} ) {
@@ -1247,9 +1295,11 @@ sub get_create_table {
          . '@@SQL_QUOTE_SHOW_CREATE := 1 */';
       $ENV{MKDEBUG} && _d($sql);
       $dbh->do($sql);
+      my $curr_db = $self->_use_db($dbh, $quoter, $db);
       $sql = "SHOW CREATE TABLE " . $quoter->quote($db, $tbl);
       $ENV{MKDEBUG} && _d($sql);
       my $href = $dbh->selectrow_hashref($sql);
+      $self->_use_db($dbh, $quoter, $curr_db);
       $sql = '/*!40101 SET @@SQL_MODE := @OLD_SQL_MODE, '
          . '@@SQL_QUOTE_SHOW_CREATE := @OLD_QUOTE */';
       $ENV{MKDEBUG} && _d($sql);
@@ -1272,9 +1322,11 @@ sub get_columns {
    my ( $self, $dbh, $quoter, $db, $tbl ) = @_;
    $ENV{MKDEBUG} && _d("Get columns for $db.$tbl");
    if ( !$self->{columns}->{$db}->{$tbl} ) {
+      my $curr_db = $self->_use_db($dbh, $quoter, $db);
       my $sql = "SHOW COLUMNS FROM " . $quoter->quote($db, $tbl);
       $ENV{MKDEBUG} && _d($sql);
       my $cols = $dbh->selectall_arrayref($sql, { Slice => {} });
+      $self->_use_db($dbh, $quoter, $curr_db);
       $self->{columns}->{$db}->{$tbl} = [
          map {
             my %row;
@@ -1727,7 +1779,7 @@ sub quote_val {
 # ###########################################################################
 
 # ###########################################################################
-# MySQLFind package 1484
+# MySQLFind package 1574
 # ###########################################################################
 use strict;
 use warnings FATAL => 'all';
@@ -1803,9 +1855,29 @@ sub find_tables {
    return map { $_->{name} } @tables;
 }
 
+sub _use_db {
+   my ( $self, $dbh, $new ) = @_;
+   if ( !$new ) {
+      $ENV{MKDEBUG} && _d('No new DB to use');
+      return;
+   }
+   my $sql = 'SELECT DATABASE()';
+   $ENV{MKDEBUG} && _d($sql);
+   my $curr = $dbh->selectrow_array($sql);
+   if ( $curr && $new && $curr eq $new ) {
+      $ENV{MKDEBUG} && _d('Current and new DB are the same');
+      return $curr;
+   }
+   $sql = 'USE ' . $self->{quoter}->quote($new);
+   $ENV{MKDEBUG} && _d($sql);
+   $dbh->do($sql);
+   return $curr;
+}
+
 sub _fetch_tbl_list {
    my ( $self, %args ) = @_;
    die "database is required" unless $args{database};
+   my $curr_db = $self->_use_db($self->{dbh}, $args{database});
    my $need_engine = $self->{engines}->{permit}
         || $self->{engines}->{reject}
         || $self->{engines}->{regexp};
@@ -1861,6 +1933,7 @@ sub _fetch_tbl_list {
       }
       return @result;
    }
+   $self->_use_db($args{dbh}, $curr_db);
 }
 
 sub _filter {
@@ -2340,6 +2413,7 @@ foreach my $database ( $finder->find_databases() ) {
             cols      => $opts{columns},
             sep       => $opts{s},
             replicate => $opts{R},
+            precision => $opts{'float-precision'},
          );
 
          # ##################################################################
